# remotex

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: pages.yml  release.yml
docs/: architecture.md  install.md  phase1-mvp.md  phase2-consolidation.md  roadmap.md  vnc.md
frontend/: biome.jsonc  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  FloatingMenu.tsx  Login.tsx  RemoteDesktop.tsx  SoftKeyboardPanel.tsx  TargetPicker.tsx  index.css  main.tsx  protocol.ts  softKeyboard.ts  touchGestures.ts  useRemoteDesktop.ts  vite-env.d.ts
packaging/: README.md  build-tarball.sh  install.sh  uninstall.sh
packaging/etc/: rdpweb.env.example  rdpweb.env.sample  rdpweb.toml.example  remotex.toml.example
site/: index.html
src/: assets.rs  auth.rs  cli.rs  config.rs  error.rs  keymap.rs  lib.rs  main.rs  protocol.rs  rdp.rs  server.rs  session.rs  vnc.rs  ws.rs
tests/: auth_e2e.rs  protocol_e2e.rs  rdp_tiles_e2e.rs  vnc_tiles_e2e.rs
tests/common/: mod.rs
tests/vnc-dummy/: Containerfile
tests/xrdp-dummy/: Containerfile
