[package]
name = "rdpweb"
version = "0.0.3"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Serves the built frontend from disk (see src/server.rs). Assets are no longer
# embedded in the binary — they ship alongside it under share/rdpweb/web.
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
toml = "1"
# Tile payload compression for the browser transport (see src/protocol.rs).
png = "0.18"

# Server-side RDP engine (see docs/phase1-mvp.md).
ironrdp = { version = "0.17", features = ["connector", "session", "graphics"] }
ironrdp-tokio = { version = "0.10", features = ["reqwest-rustls-ring"] }
ironrdp-tls = { version = "0.2", features = ["rustls-ring"] }
# Direct dep so we can install the ring CryptoProvider as the process default
# before any TLS handshake (ironrdp-tls uses rustls with no bundled provider).
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

[dev-dependencies]
tokio-tungstenite = "0.29"
